logs/dag_id=dag/run_id=manual__2022-12-07T20:57:53.858338+00:00/task_id=procedure_insert/attempt=1.log
[2022-12-07T20:58:09.174+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag.procedure_insert manual__2022-12-07T20:57:53.858338+00:00 [queued]>
[2022-12-07T20:58:09.196+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag.procedure_insert manual__2022-12-07T20:57:53.858338+00:00 [queued]>
[2022-12-07T20:58:09.197+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-12-07T20:58:09.197+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2022-12-07T20:58:09.198+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-12-07T20:58:09.222+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): procedure_insert> on 2022-12-07 20:57:53.858338+00:00
[2022-12-07T20:58:09.231+0000] {standard_task_runner.py:55} INFO - Started process 10028 to run task
[2022-12-07T20:58:09.235+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag', 'procedure_insert', 'manual__2022-12-07T20:57:53.858338+00:00', '--job-id', '1957', '--raw', '--subdir', 'DAGS_FOLDER/dag.py', '--cfg-path', '/tmp/tmpxrsciq9e']
[2022-12-07T20:58:09.236+0000] {standard_task_runner.py:83} INFO - Job 1957: Subtask procedure_insert
[2022-12-07T20:58:09.323+0000] {task_command.py:376} INFO - Running <TaskInstance: dag.procedure_insert manual__2022-12-07T20:57:53.858338+00:00 [running]> on host a9d6893ff63e
[2022-12-07T20:58:09.413+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=lofitravel
AIRFLOW_CTX_DAG_ID=dag
AIRFLOW_CTX_TASK_ID=procedure_insert
AIRFLOW_CTX_EXECUTION_DATE=2022-12-07T20:57:53.858338+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-12-07T20:57:53.858338+00:00
[2022-12-07T20:58:09.424+0000] {base.py:71} INFO - Using connection ID 'postgres_localhost' for task execution.
[2022-12-07T20:58:09.436+0000] {sql.py:315} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS prediction_table(
            CREATE OR REPLACE PROCEDURE insert_data()
            LANGUAGE SQL
            AS $$
            INSERT INTO prediction_table
            SELECT date + interval '1 day', ticker_from, ticker_to, amount from pairs 
            WHERE date = CURRENT_DATE 
            $$;
            CALL insert_data(); , parameters: None
[2022-12-07T20:58:09.437+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "CREATE"
LINE 3:             CREATE OR REPLACE PROCEDURE insert_data()
                    ^

[2022-12-07T20:58:09.450+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=dag, task_id=procedure_insert, execution_date=20221207T205753, start_date=20221207T205809, end_date=20221207T205809
[2022-12-07T20:58:09.464+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 1957 for task procedure_insert (syntax error at or near "CREATE"
LINE 3:             CREATE OR REPLACE PROCEDURE insert_data()
                    ^
; 10028)
[2022-12-07T20:58:09.487+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2022-12-07T20:58:09.508+0000] {taskinstance.py:2623} INFO - 0 downstream tasks scheduled from follow-on schedule check
